# bd-agent-chameleon

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
doc/: ARCHITECTURE.md
src/bd_agent_chameleon/: beads_task_manager.py  chameleon.py  claude_launcher.py  config_manager.py  main.py  models.py  protocols.py
tests/: test_beads_task_manager.py  test_chameleon.py  test_claude_launcher.py  test_config_manager.py  test_models.py  test_protocols.py
